crates/warp_i18n/tests/compile_fail/t_macro_rejects_variable.rs
// compile_fail: t!() requires a string literal, not a variable.
use warp_i18n::t;

fn main() {
    let key = "ui-button-ok";
    let _label = t!(key); //~ ERROR
}
