crates/warp_i18n/tests/compile_fail/t_macro_rejects_variable.stderr
error: expected string literal
 --> tests/compile_fail/t_macro_rejects_variable.rs:6:21
  |
6 |     let _label = t!(key); //~ ERROR
  |                     ^^^
